@@ -24,13 +24,12 @@
     </scm>
 
     <properties>
-        <maven.compiler.release>15</maven.compiler.release>
-        <javac.src.version>${maven.compiler.release}</javac.src.version>
-        <javac.target.version>${maven.compiler.release}</javac.target.version>
+        <maven.compiler.release>22</maven.compiler.release>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <javafx.version>15</javafx.version>
-        <junit.version>5.7.0</junit.version>
-        <assertj.version>3.17.2</assertj.version>
+        <javafx.version>22.0.1</javafx.version>
+        <junit.version>5.10.2</junit.version>
+        <assertj.version>3.25.3</assertj.version>
              
         <tagNameFormat>v@{project.version}</tagNameFormat>
         <preparationGoals>clean compile test-compile</preparationGoals>
@@ -93,34 +92,31 @@
                     <include>**/*.css</include>
                 </includes>
             </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.png</include>
+                </includes>
+            </resource>
         </resources>
         <pluginManagement>
             <plugins>
                 <plugin>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.1</version>
-                    <configuration>
-                        <compilerArgs>--enable-preview</compilerArgs>
-                    </configuration>
+                    <version>3.13.0</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.22.2</version>
-                    <configuration>
-                        <argLine>--enable-preview</argLine>
-                    </configuration>
+                    <version>3.2.5</version>
                 </plugin>
                 <plugin>
                     <groupId>org.openjfx</groupId>
                     <artifactId>javafx-maven-plugin</artifactId>
-                    <version>0.0.4</version>
+                    <version>0.0.8</version>
                     <configuration>
-                        <jlinkImageName>hellofx</jlinkImageName>
+                        <jlinkImageName>jchess</jlinkImageName>
                         <launcher>launcher</launcher>
                         <mainClass>jchess.gui.JChess</mainClass>
-                        <options>
-                            <option>--enable-preview</option>
-                        </options>
                     </configuration>
                 </plugin>
             </plugins>
